# nn_introduction

./: CMakeLists.txt  Dockerfile
contrib/catboost/: catboost_wrapper.h
cpp/: CMakeLists.txt
cpp/apps/: CMakeLists.txt
cpp/apps/cifar_networks/: lenet_catboost.cpp
cpp/apps/experiments/: CMakeLists.txt  catboost_nn.cpp  catboost_nn.h  cifar10_em.cpp  cifar10_em.h  common.cpp  train_cnn_linear_trees.cpp  train_default.cpp  train_default_em.cpp  train_with_catboost.cpp  vgg_catboost.cpp
cpp/apps/train_linear_ot/: CMakeLists.txt  apply.cpp  fit.cpp  main.cpp
cpp/apps/train_linear_ot/configs/: apply_cfg.json  fit_cfg.json
cpp/core/: buffer.h  matrix.h  multi_dim_array.h  scalar.h  torch_helpers.h  vec.cpp  vec.h  vec_factory.cpp
cpp/data/: binarized_dataset.cpp  binarized_dataset.h  dataset.h  grid.cpp  grid.h  grid_builder.cpp  grid_builder.h  load_data.cpp
cpp/data/ut/: data_ut.cpp
cpp/funcs/: CMakeLists.txt  soft_tree_function_cuda.h
cpp/funcs/ut/: CMakeLists.txt  soft_tree_test.cpp
cpp/methods/: CMakeLists.txt  boosting.cpp  boosting.h  boosting_weak_target_factory.cpp  boosting_weak_target_factory.h  correlation_bin_stats.h  greedy_linear_oblivious_trees.cpp  greedy_linear_oblivious_trees.h  greedy_linear_oblivious_trees_v2.cpp  greedy_linear_oblivious_trees_v2.h  greedy_oblivious_tree.cpp  linear_trees_booster.cpp  linear_trees_booster.h  listener.h
cpp/models/: bin_optimized_model.h  ensemble.h  linear_oblivious_tree.cpp  linear_oblivious_tree.h  oblivious_tree.cpp
cpp/models/polynom/monoms/: CMakeLists.txt  monom.h
cpp/targets/: additive_statistics.h  cross_entropy.cpp  cross_entropy.h  l2.cpp  l2.h  linear_l2.h  linear_l2_stat.cpp  linear_l2_stat.h  target.h
cpp/util/: counter.cpp  io.h  parallel_executor.h  singleton.h
cpp/vec_tools/: transform.cpp  transform.h
(+49 files in other folders)
